Separate the Camera object from the inputs handling
The Keyboard object modify the view-frame vectors Camera attributeS.

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -18,7 +18,7 @@ BUILDDIR = build
 SRCDIR = src
 
 #Paths to the source files
-SOURCES = main.cpp Renderer.cpp Suzanne.cpp Skybox.cpp Camera.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
+SOURCES = main.cpp Renderer.cpp Suzanne.cpp Skybox.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
 #Paths to the objects files (generated from the sources)
 OBJECTS = $(SOURCES:%.cpp=$(BUILDDIR)/%.o)
 
@@ -44,6 +44,7 @@ run:
 #Create the build directory and its subdirectories
 dirs:
 	@mkdir -p $(BUILDDIR)/helpers/lodepng
+	@mkdir -p $(BUILDDIR)/camera
 
 #Remove the whole build directory
 .PHONY: clean
