Created a Framebuffer class.
A framebuffer is a rendering target (like a virtual screen) where one
can draw. The result of a framebuffer render pass can be stored in a
texture and used in another pass.


Former-commit-id: bc29bb997d17e16f5ec32e227213bf83d14bf102

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -18,7 +18,7 @@ BUILDDIR = build
 SRCDIR = src
 
 #Paths to the source files
-SOURCES = main.cpp Renderer.cpp Suzanne.cpp Dragon.cpp Skybox.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
+SOURCES = main.cpp Renderer.cpp Framebuffer.cpp Suzanne.cpp Dragon.cpp Skybox.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
 #Paths to the objects files (generated from the sources)
 OBJECTS = $(SOURCES:%.cpp=$(BUILDDIR)/%.o)
 
