--- a/Makefile.linux
+++ b/Makefile.linux
@@ -18,7 +18,7 @@ BUILDDIR = build
 SRCDIR = src
 
 #Paths to the source files
-SOURCES = main.cpp Renderer.cpp Framebuffer.cpp ScreenQuad.cpp Suzanne.cpp Dragon.cpp Skybox.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
+SOURCES = main.cpp Renderer.cpp Framebuffer.cpp ScreenQuad.cpp Suzanne.cpp Dragon.cpp Plane.cpp Skybox.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
 #Paths to the objects files (generated from the sources)
 OBJECTS = $(SOURCES:%.cpp=$(BUILDDIR)/%.o)
 
