--- a/Makefile.linux
+++ b/Makefile.linux
@@ -9,8 +9,8 @@ LIBDIR = -L/usr/local/lib
 #Libraries needed: OpenGL, GLEW and glfw3. GLEW requires GLU, glfw3 require X11, Xi, and so on...
 LIBS = -lGLEW -lglfw3 -lGL -lGLU -lX11 -lXi -lXrandr -lXxf86vm -lXinerama -lXcursor -lrt -lm -pthread -ldl
 
-#Compiler flags: compile, we use the C++11 standard, and display 'all' warnings.
-COMPFLAGS = -c -std=c++11 -Wall
+#Compiler flags: C++11 standard, and display 'all' warnings.
+CXXFLAGS = -std=c++11 -Wall
 
 #Build directory
 BUILDDIR = build
@@ -18,24 +18,36 @@ BUILDDIR = build
 SRCDIR = src
 
 #Paths to the source files
-SOURCES = main.cpp Renderer.cpp Framebuffer.cpp Gbuffer.cpp ScreenQuad.cpp  GbufferQuad.cpp  Object.cpp Skybox.cpp Light.cpp camera/Camera.cpp camera/Keyboard.cpp helpers/ProgramUtilities.cpp helpers/MeshUtilities.cpp helpers/lodepng/lodepng.cpp
-#Paths to the objects files (generated from the sources)
-OBJECTS = $(SOURCES:%.cpp=$(BUILDDIR)/%.o)
+#Collect sources from subdirectories (up to depth 3) 
+# /!\ at depth 4, src/helpers/glm/detail contains dummy cpp files that we want to ignore.
+SRC_DEPTH_1 = $(wildcard $(SRCDIR)/*.cpp)
+SRC_DEPTH_2 = $(wildcard $(SRCDIR)/*/*.cpp)
+SRC_DEPTH_3 = $(wildcard $(SRCDIR)/*/*/*.cpp)
+SOURCES = $(SRC_DEPTH_3) $(SRC_DEPTH_2) $(SRC_DEPTH_1)
+
+#Paths to the object files
+OBJECTS = $(SOURCES:$(SRCDIR)/%.cpp=$(BUILDDIR)/%.o)
+
+#Paths to the subdirectories
+SUBDIRS_LIST = $(shell find src -type d)
+SUBDIRS = $(SUBDIRS_LIST:$(SRCDIR)%=$(BUILDDIR)%)
 
 #Executable name
 EXECNAME = glprogram
 
 #Re-create the build dir if needed, compile and link.
-all: dirs $(OBJECTS) $(EXECNAME)
+all: dirs $(EXECNAME)
 
 #Linking phase: combine all objects files to generate the executable
 $(EXECNAME): $(OBJECTS)
-	$(CXX) $(LIBDIR) $(OBJECTS) $(LIBS) -o $(BUILDDIR)/$(EXECNAME)
-	@echo "\nCompilation finished."
+	@echo "Linking $(EXECNAME)..."
+	@$(CXX) $(LIBDIR) $(OBJECTS) $(LIBS) -o $(BUILDDIR)/$(EXECNAME)
+	@echo "Done!"
 
 #Compiling phase: generate the object files from the source files
 $(BUILDDIR)/%.o : $(SRCDIR)/%.cpp
-	$(CXX) $(COMPFLAGS) $(INCLUDEDIR)  $< -o $@
+	@echo "Compiling $<"
+	@$(CXX) -c $(CXXFLAGS) $(INCLUDEDIR)  $< -o $@
 
 #Run the executable
 run:
@@ -43,11 +55,12 @@ run:
 
 #Create the build directory and its subdirectories
 dirs:
-	@mkdir -p $(BUILDDIR)/helpers/lodepng
-	@mkdir -p $(BUILDDIR)/camera
+	@mkdir -p $(SUBDIRS)
 
 #Remove the whole build directory
 .PHONY: clean
 clean :
 	rm -r $(BUILDDIR)
+
+
 
