--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 build/
 .DS_Store
 GL_Template.wiki/
-GL_Template.xcodeproj/
 tools/
 ressources/spheres/
 Debug/
@@ -11,3 +10,4 @@ x64/
 *.VC.db
 *.user
 ext/
+*.xcuserstate
