--- a/GL_Template.vcxproj
+++ b/GL_Template.vcxproj
@@ -159,7 +159,6 @@
     <ClCompile Include="src\Object.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\ScreenQuad.cpp" />
-    <ClCompile Include="src\Skybox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AmbientQuad.h" />
@@ -178,13 +177,13 @@
     <ClInclude Include="src\libs\glm\glm.hpp" />
     <ClInclude Include="src\libs\stb_image\stb_image.h" />
     <ClInclude Include="src\libs\tinydir\tinydir.h" />
+    <ClInclude Include="src\libs\tinyexr\tinyexr.h" />
     <ClInclude Include="src\lights\DirectionalLight.h" />
     <ClInclude Include="src\lights\Light.h" />
     <ClInclude Include="src\lights\PointLight.h" />
     <ClInclude Include="src\Object.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ScreenQuad.h" />
-    <ClInclude Include="src\Skybox.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\gbuffer\ambient.frag" />
