--- a/GL_Template.vcxproj
+++ b/GL_Template.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\AmbientQuad.cpp" />
+    <ClCompile Include="src\Blur.cpp" />
     <ClCompile Include="src\camera\Camera.cpp" />
     <ClCompile Include="src\camera\Joystick.cpp" />
     <ClCompile Include="src\camera\Keyboard.cpp" />
@@ -162,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AmbientQuad.h" />
+    <ClInclude Include="src\Blur.h" />
     <ClInclude Include="src\camera\Camera.h" />
     <ClInclude Include="src\camera\Joystick.h" />
     <ClInclude Include="src\camera\Keyboard.h" />
@@ -187,35 +189,31 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\gbuffer\ambient.frag" />
-    <None Include="resources\shaders\gbuffer\ambient.vert" />
-    <None Include="resources\shaders\gbuffer\object_gbuffer.frag" />
-    <None Include="resources\shaders\gbuffer\object_gbuffer.vert" />
     <None Include="resources\shaders\gbuffer\scene_gbuffer.frag" />
-    <None Include="resources\shaders\gbuffer\scene_gbuffer.vert" />
-    <None Include="resources\shaders\gbuffer\skybox_gbuffer.frag" />
-    <None Include="resources\shaders\gbuffer\skybox_gbuffer.vert" />
     <None Include="resources\shaders\gbuffer\ssao.frag" />
-    <None Include="resources\shaders\gbuffer\ssao.vert" />
     <None Include="resources\shaders\lights\directional_light.frag" />
-    <None Include="resources\shaders\lights\directional_light.vert" />
     <None Include="resources\shaders\lights\object_depth.frag" />
     <None Include="resources\shaders\lights\object_depth.vert" />
     <None Include="resources\shaders\lights\point_light.frag" />
     <None Include="resources\shaders\lights\point_light.vert" />
     <None Include="resources\shaders\lights\point_light_debug.frag" />
     <None Include="resources\shaders\lights\point_light_debug.vert" />
+    <None Include="resources\shaders\objects\object_gbuffer.frag" />
+    <None Include="resources\shaders\objects\object_gbuffer.vert" />
+    <None Include="resources\shaders\objects\parallax_gbuffer.frag" />
+    <None Include="resources\shaders\objects\parallax_gbuffer.vert" />
+    <None Include="resources\shaders\objects\skybox_gbuffer.frag" />
+    <None Include="resources\shaders\objects\skybox_gbuffer.vert" />
+    <None Include="resources\shaders\screens\bloom.frag" />
+    <None Include="resources\shaders\screens\blur.frag" />
     <None Include="resources\shaders\screens\boxblur.frag" />
-    <None Include="resources\shaders\screens\boxblur.vert" />
     <None Include="resources\shaders\screens\boxblur_float.frag" />
-    <None Include="resources\shaders\screens\boxblur_float.vert" />
     <None Include="resources\shaders\screens\final_screenquad.frag" />
-    <None Include="resources\shaders\screens\final_screenquad.vert" />
     <None Include="resources\shaders\screens\fxaa.frag" />
-    <None Include="resources\shaders\screens\fxaa.vert" />
+    <None Include="resources\shaders\screens\passthrough.frag" />
+    <None Include="resources\shaders\screens\passthrough.vert" />
     <None Include="resources\shaders\screens\screenquad.frag" />
-    <None Include="resources\shaders\screens\screenquad.vert" />
     <None Include="resources\shaders\screens\tonemap.frag" />
-    <None Include="resources\shaders\screens\tonemap.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
