Gitignore: fix glm/ext exclusion, clean up.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
-build/
-.DS_Store
-Rendu.wiki/
+/build/
 /tools/
-ressources/spheres/
-Debug/
-Release/
-x64/
-.vs/
-*.VC.db
-*.user
-ext/
-*.xcuserstate
-*/xcuserdata/*
-binaries/
-config.ini
+/ext/
+/src/internal/
+/resources/internal/
+/resources/additional/
+/premake5.exe
 resources.zip
-src/internal/
-resources/internal/
-resources/additional/
+.DS_Store
