--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,14 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
+    - os: linux
+      dist: bionic
+      compiler: clang
+      before_install:
+        - sudo apt-get install -y libgtk-3-dev
+      install:
+        - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
+        - tar -xzf premake.tar.gz
 
 
 script:
