--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-macosx.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
+      script:
+        - ./premake5 gmake2 --skip_shader_validation
+        - cd build/
+        - make ALL
+        - cd ..
     - os: linux
       dist: bionic
       compiler: gcc
@@ -19,6 +24,11 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
+      script:
+        - ./premake5 gmake2 --skip_shader_validation
+        - cd build/
+        - make ALL
+        - cd ..
     - os: linux
       dist: bionic
       compiler: clang
@@ -27,13 +37,18 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
+      script:
+        - ./premake5 gmake2 --skip_shader_validation
+        - cd build/
+        - make ALL
+        - cd ..
     - os: windows
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-windows.zip -O premake.zip
         - 7z e premake.zip
+      script:
+        - ./premake5 vs2017 --skip_shader_validation
+        - cd build
+        - MSBuild.exe Rendu.sln //m:2 //nologo //p:Configuration=Release //p:Platform=x64
+        - cd ..
 
-script:
-  - ./premake5 gmake2 --skip_shader_validation
-  - cd build/
-  - make ALL
-  - cd ..
