--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,12 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-windows.zip -O premake.zip
         - 7z e premake.zip
-
+      env:
+        - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
       script:
+        - export PATH=$MSBUILD_PATH:$PATH
         - ./premake5 vs2017 --skip_shader_validation
         - cd build
-        - cmd.exe /C 'MSBuild.exe Rendu.sln /m:2 /nologo /p:Configuration=Release /p:Platform=x64'
+        - MSBuild.exe Rendu.sln //m:2 //nologo //p:Configuration=Release //p:Platform=x64
         - cd ..
 
