--- a/.travis.yml
+++ b/.travis.yml
@@ -11,47 +11,36 @@ matrix:
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-macosx.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
-      script:
-        - ./premake5 gmake2 --skip_shader_validation
-        - cd build/
-        - make ALL
-        - cd ..
     - os: linux
       dist: bionic
       compiler: gcc
-      before_install:
-        - sudo apt-get install -y libgtk-3-dev
       install:
+        - apt-get install -y libgtk-3-dev
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
-      script:
-        - ./premake5 gmake2 --skip_shader_validation
-        - cd build/
-        - make ALL
-        - cd ..
     - os: linux
       dist: bionic
       compiler: clang
-      before_install:
-        - sudo apt-get install -y libgtk-3-dev
       install:
+        - apt-get install -y libgtk-3-dev
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz -O premake.tar.gz
         - tar -xzf premake.tar.gz
-      script:
-        - ./premake5 gmake2 --skip_shader_validation
-        - cd build/
-        - make ALL
-        - cd ..
     - os: windows
       install:
         - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-windows.zip -O premake.zip
         - 7z e premake.zip
       env:
         - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
-      script:
+      before_script:
         - export PATH=$MSBUILD_PATH:$PATH
-        - ./premake5 vs2017 --skip_shader_validation
-        - cd build
-        - MSBuild.exe Rendu.sln -t:Meta\ALL -m:2 -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
-        - cd ..
+
+script:
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ./premake5 vs2017 --skip_shader_validation; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux"   ]; then ./premake5 gmake2 --skip_shader_validation; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx"     ]; then ./premake5 gmake2 --skip_shader_validation; fi
+  - cd build
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then MSBuild.exe Rendu.sln -t:Meta\\ALL -m:2 -nologo -v:minimal -p:Configuration=Release -p:Platform=x64; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux"   ]; then make ALL; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx"     ]; then make ALL; fi
+  - cd ..
 
