--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Dependencies-ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash
+        working-directory: ${{github.workspace}}
         run: |
           sudo apt-get update -y && sudo apt-get install -yq xorg-dev libgtk-3-dev
           wget -O premake.tar.gz ${{env.premake_url}}-linux.tar.gz
@@ -44,6 +45,7 @@ jobs:
       - name: Dependencies-macos
         if: startsWith(matrix.os, 'macOS')
         shell: bash
+        working-directory: ${{github.workspace}}
         run: |
           brew install wget
           wget -O premake.tar.gz ${{env.premake_url}}-macosx.tar.gz
@@ -52,10 +54,11 @@ jobs:
       - name: Dependencies-windows
         if: startsWith(matrix.os, 'windows')
         shell: bash
+        working-directory: ${{github.workspace}}
         run: |
-          choco install wget unzip
+          choco install wget
           wget -O premake.zip ${{env.premake_url}}-windows.zip
-          unzip -xzf premake.zip
+          7z e premake.zip
           
       - name: Configure
         shell: bash
