CI: Update Github Actions.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,6 +60,10 @@ jobs:
           wget -O premake.zip ${{env.premake_url}}-windows.zip
           7z e premake.zip
           
+      - name: Toolchain-windows
+        if: startsWith(matrix.os, 'windows')
+        uses: microsoft/setup-msbuild@v1
+        
       - name: Configure
         shell: bash
         working-directory: ${{github.workspace}}
@@ -77,4 +81,4 @@ jobs:
         if: startsWith(matrix.os, 'windows')
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: MSBuild.exe Rendu.sln -t:Meta\\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
+        run: msbuild Rendu.sln -t:Meta\\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
