CI: Update Github Actions.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,4 +82,4 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: cmd
         run: |
-          "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" .\Rendu.sln -t:Meta\\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
+          "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" .\Rendu.sln -t:Meta\ALL -nologo -v:minimal -p:Configuration=Release -p:Platform=x64
